--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Sky House</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
+  
 </head>
+
 <body>
-    
+    <header>
+        <img class="sky-logo" src="img/logo.svg" alt="Sky House Logo"/>
+        <nav class="main-menu">
+            <div>მთავარი</div>
+            <div>ჩვენ შესახებ</div>
+            <div>სერვისები</div>
+            <div>პროდუქტები</div>
+            <div>პარტნიორები</div>
+            <div>კონტაქტი</div>
+        </nav>
+    </header>
+    <main>
+       <div class="projects">
+         <div id="first"></div>
+         <div id="second"></div>
+         <div id="third"></div>
+         <div id="fourth"></div>
+       </div>
+    </main>
 </body>
+
 </html>
