--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
     </header>
     <main>
        <div class="projects">
-         <div id="first"></div>
+         <div id="first">
+            <div class="innerdiv">
+                ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+            </div >
+         </div>
          <div id="second"></div>
          <div id="third"></div>
-         <div id="fourth"></div>
        </div>
     </main>
 </body>
